--- a/project/css/style.css
+++ b/project/css/style.css
@@ -46,6 +46,9 @@
     transform: scale(1.03);
     box-shadow: 0 0 15px rgba(0, 0, 0, 1);
 }
+.ov-img{
+    margin-left: -25px;
+}
 @media screen and (max-width:830px){
     .sidebar{
         position: fixed;
