--- a/project/css/style.css
+++ b/project/css/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 
 *{
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 :root{
@@ -49,7 +49,7 @@
 .ov-img{
     margin-left: -25px;
 }
-.item-card{
+.item-carousel{
     margin-top: -100px;
 }
 .item-card-img{
