--- a/project/css/style.css
+++ b/project/css/style.css
@@ -55,6 +55,13 @@
 .item-card-img{
     height: 200px;
 }
+.sub-list tr{
+    transition: 0.3s;
+    cursor: pointer;
+}
+.sub-list tr:active{
+    transform: scale(1.02);
+}
 @media screen and (max-width:830px){
     .sidebar{
         position: fixed;
